--- a/haml/index.haml
+++ b/haml/index.haml
@@ -7,6 +7,7 @@
     %link{ href: "css/ionic.app.min.css", rel: "stylesheet" }
     %link{ href: "css/custom.min.css", rel: "stylesheet" }
     %script{ src: 'lib/ionic/js/ionic.bundle.js' }
+    %script{ src: 'ng-cordova.min.js' }
     %script{ src: 'cordova.js' }
     %script{ src: 'cordova_plugins.js' }
     %script{ src: 'js/controllers/tipadvisor.newcontrollers.js' }
