--- a/haml/index.haml
+++ b/haml/index.haml
@@ -7,12 +7,13 @@
     %link{ href: "css/ionic.app.min.css", rel: "stylesheet" }
     %link{ href: "css/custom.min.css", rel: "stylesheet" }
     %script{ src: 'lib/ionic/js/ionic.bundle.js' }
-    %script{ src: 'ng-cordova.min.js' }
+    %script{ src: 'js/ng-cordova.min.js' }
     %script{ src: 'cordova.js' }
     %script{ src: 'cordova_plugins.js' }
     %script{ src: 'js/controllers/tipadvisor.newcontrollers.js' }
     %script{ src: 'js/services/tipadvisor.newfactories.js' }
     %script{ src: 'js/directives/tipadvisor.directives.js' }
+    %script{ src: 'js/providers/tipadvisor.providers.js' }
     %script{ src: 'js/tipadvisor.js' }
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
     %ion-nav-view{ "animation" => "fade-in-out" }
