disable sqlite provider

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -13,7 +13,7 @@
     %script{ src: 'js/controllers/tipadvisor.newcontrollers.js' }
     %script{ src: 'js/services/tipadvisor.newfactories.js' }
     %script{ src: 'js/directives/tipadvisor.directives.js' }
-    %script{ src: 'js/providers/tipadvisor.providers.js' }
+    / %script{ src: 'js/providers/tipadvisor.providers.js' }
     %script{ src: 'js/tipadvisor.js' }
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
     %ion-nav-view{ "animation" => "fade-in-out" }
