--- a/www/templates/calc.html
+++ b/www/templates/calc.html
@@ -42,7 +42,7 @@
     <button class='num-btn' ng-click="btnInput('.')" type='button'>
       <div class='num-btn-text'>.</div>
     </button>
-    <button class='num-btn' ng-click="btnInput('C')" type='button'>
+    <button class='num-btn' ng-click="btnInput('C')" on-hold='clearAll()' type='button'>
       <div class='num-btn-text'>C</div>
     </button>
   </div>
