--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -12,8 +12,10 @@
         .number ({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}
       #panel-1.tip-panel.quarter-panel{ "ng-click" => "changeActivePanel(1)" }
         .label Tip
-        .number 
-          ({{ tip.percent * 100 | number : 2 }}%) {{ tip.currency | currency }}
+        .number  
+          %span{ style: "font-weight: bold" }
+            ({{ tip.percent * 100 | number : 2 }}%)
+          {{ tip.currency | currency }}
       #panel-3.total-panel.quarter-panel
         .label Total
         .number {{ total | currency }}
