change background to random color on press of .

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -10,6 +10,7 @@
     / %script{ src: 'js/ng-cordova.min.js' }
     %script{ src: 'cordova.js' }
     %script{ src: 'cordova_plugins.js' }
+    %script{ src: 'js/randomcolor.js' }
     %script{ src: 'js/controllers/tipadvisor.newcontrollers.js' }
     %script{ src: 'js/services/tipadvisor.newfactories.js' }
     %script{ src: 'js/directives/tipadvisor.directives.js' }
