--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -194,6 +194,9 @@ body {
         .num-btn {
           border-bottom-width:0px;
         }
+        .num-btn:last-child {
+          border-right-width: 1px;
+        }
       }
       .num-btn {
         &:first-child {
@@ -202,7 +205,7 @@ body {
         }
         &:last-child {
           border-right-width:0px;
-          border-left-width:1px;
+          border-left-width:0px;
         }
         &:active {
           background: white;
@@ -218,6 +221,7 @@ body {
         background: transparent;
         border: 0.5px solid rgba(255,255,255,0.2);
         border-bottom-width:1px;
+        border-right-width:1px;
         color: white;
         cursor: pointer;
         display: inline-block;
@@ -227,7 +231,7 @@ body {
         margin:0px;
         outline: none;
         text-align: center;
-        width: (100% / 3);
+        width: (100% / 4);
         -webkit-tap-highlight-color: white;
       }
     }
@@ -254,9 +258,9 @@ body {
       .num-btns-container {
         .row-btns {
           .num-btn {
-            width: 106px;
+            width: 80px;
             &:last-child, &:first-child {
-              width: 107px;
+              width: 80px;
             }
           }
         }
@@ -307,3 +311,6 @@ body {
   -moz-animation: fadeOut 0.3s;
   animation: fadeOut 0.3s;
   position: absolute; }
+.icon {
+  font-size: 140%;
+}
