--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -314,3 +314,16 @@ body {
 .icon {
   font-size: 140%;
 }
+
+.info-modal {
+  background: rgba(255,255,255,1);
+  color: black;
+  font-size: 1.2em;
+}
+.example-icon {
+  font-size: 120%;
+  display: inline-block;
+}
+.example-text {
+  display: inline-block;
+}
