--- a/haml/index.haml
+++ b/haml/index.haml
@@ -15,6 +15,7 @@
     %script{ src: 'js/services/tipadvisor.newfactories.js' }
     %script{ src: 'js/directives/tipadvisor.directives.js' }
     / %script{ src: 'js/providers/tipadvisor.providers.js' }
+    %script{ src: 'js/filters/tipadvisor.filters.js' }
     %script{ src: 'js/tipadvisor.js' }
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
     %ion-nav-view{ "animation" => "fade-in-out" }
