--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -9,12 +9,12 @@
         .number {{ bill.currency | currency }}
       #panel-2.tax-panel.quarter-panel{ "ng-click" => "changeActivePanel(2)" }
         .label Tax 
-        .number ({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}
+        .number ({{ tax.percent | percent }}%) {{ tax.currency | currency }}
       #panel-1.tip-panel.quarter-panel{ "ng-click" => "changeActivePanel(1)" }
         .label Tip
         .number  
           %span{}
-            ({{ tip.percent * 100 | number : 2 }}%)
+            ({{ tip.percent | percent }}%)
           {{ tip.currency | currency }}
       #panel-3.total-panel.quarter-panel
         .label Total
